--- a/assets/mycss/Style.css
+++ b/assets/mycss/Style.css
@@ -15,7 +15,7 @@
 
 .main.style2 {
     background-color: #333;
-    color: rgba(255, 255, 255, 0.85);
+    color: rgba(255, 255, 255, 1);
     background-attachment: fixed, fixed;
     background-image: url('../../images/beach.jpg');
     background-size: 1350px;
@@ -23,4 +23,23 @@
 
 .main.style1 {
     background: black;
+}
+
+#footer {
+    padding: 6em 0 6em 0;
+    background-color: black;
+    color: rgba(255, 255, 255, 1);
+    background-attachment: fixed,	fixed,	fixed;
+    background-image: url(images/overlay2.png), url(images/overlay4.svg), linear-gradient(45deg, black, black 50%, black 95%);
+    background-position: top left,	center center,	center center;
+    background-size: auto,	cover,	cover;
+    text-align: center;
+}
+
+p {
+    color: white;
+}
+
+.firstRow {
+    color: #337ab7;
 }
