--- a/assets/mycss/Style.css
+++ b/assets/mycss/Style.css
@@ -34,6 +34,8 @@
     background-position: top left,	center center,	center center;
     background-size: auto,	cover,	cover;
     text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 p {
@@ -41,5 +43,9 @@ p {
 }
 
 .colorBlue {
+    color: #337ab7;
+}
+
+.footerColor {
     color: #337ab7;
 }
